@@ -1,5 +1,9 @@
 2005-09-20  Kazuhiko  <kazuhiko@fdiary.net>
-	* plugin/00default.rb (toc): return an empty string.
+	* style/default/html_formatter.rb (replace_link): display
+	specified titles in interwikis (closs #25).
+	ditto in outer aliases.
+
+	* plugin/00default.rb (toc): return an empty string (closes #24).
 
 2005-09-18  Kazuhiko  <kazuhiko@fdiary.net>
 	* style/default/html_formatter.rb (replace_auto_link): do nothing
